# MMseqs2-Regression

./: .dockerignore  .gitmodules  CMakeLists.txt  CreateDataset.cpp  CreateDatasetPos.cpp  Dockerfile  EvaluateResults.cpp  EvaluateResults.h  EvaluateResultsPos.cpp  TestMain.cpp  fit_sens.sh  run_regression.sh
data/: RBHproteinsA.fas  RBHproteinsB.fas  dna.fas
regression/: run_apply.sh  run_cluster.sh  run_cluster_update.sh  run_dbprofile.sh  run_dbprofile_index.sh  run_easy_cluster.sh  run_easy_cluster_reassign.sh  run_easy_linclust.sh  run_easy_nuclcluster.sh  run_easy_nuclnucl_linsearch_split.sh  run_easy_profile.sh  run_easy_search.sh  run_easy_search_index_split.sh  run_easy_search_taxoutput.sh  run_easynuclnucltax.sh  run_expand.sh  run_extractorfs.sh  run_filterdb.sh  run_index_compatible.sh  run_linclust.sh  run_linclust_adjacent_disabled.sh  run_linclust_split.sh  run_multihit.sh  run_nuclnucl.sh  run_nuclnucl_linsearch.sh  run_nuclnucl_linsearchtranslated.sh  run_nuclnucl_translated.sh  run_nuclprot.sh  run_nuclprottax.sh  run_prefilter_db_load_mode.sh  run_profile.sh  run_profilestates.sh  run_protnucl.sh  run_rbh.sh  run_search.sh  run_search_gpu.sh  run_search_gpu_server.sh  run_searchtaxfilter.sh  run_sliceprofile.sh  run_slicetechnical.sh  (+1 more)
samtools/: make_samtools.sh  samtools.sh
scripts/: codeship_dump.sh  compare_frags.pl  regression_report.sh  run_codeship_pipeline.sh  run_mmseqs_clu_regression.sh  run_mmseqs_dbprofile_regression.sh  run_mmseqs_easy_clu_regression.sh  run_mmseqs_easy_regression.sh  run_mmseqs_extractorfs.sh  run_mmseqs_multihit_regression.sh  run_mmseqs_nucl_nucl_regression.sh  run_mmseqs_nucl_regression.sh  run_mmseqs_profilestates_regression.sh  run_mmseqs_rbh.sh  run_mmseqs_regression.sh  run_mmseqs_sliceprofile_regression.sh
src/: EvaluateResults.cpp
